--- a/Day2.ipynb
+++ b/Day2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Day2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOxSx7c9rNDbSIM4NVcHxF+",
+      "authorship_tag": "ABX9TyNgjjGQVE+NY9fNqyGpYOEq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,7 +59,7 @@
         "print(\"Largest element is:\",a[n-1])\n",
         "#l=[int(input(x))  for range(input(‘Enter n’))]\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,7 +91,7 @@
         "x=0\n",
         "print('The greatest no is',max([int(input(x)) for i in range(int(input(\"Enter n\")))]))\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,7 +136,7 @@
         "print(\"The even list\",even)\n",
         "print(\"The odd list\",odd)\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
         "new.sort()\n",
         "print(\"Sorted list is:\",new)\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +225,7 @@
         " \n",
         "print(a)\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
         "            a[j+1]=temp \n",
         "print('Second largest number is:',a[n-2])\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,7 +297,7 @@
         "a=[(x,x**2) for x in range(l_range,u_range+1)]\n",
         "print(a)\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,7 +331,7 @@
         "    a.append(random.randint(1,20))\n",
         "print('Randomised list is: ',a)\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,17 +344,123 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "ikN4uYxOrBqy",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Hv1RD4i50lDi",
+        "colab_type": "text"
       },
       "source": [
-        ""
+        "##**TUPLES Examples**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L-zGVHwV0rki",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ada9ceb9-8fc4-4dd0-eb58-ae5c46d36702"
+      },
+      "source": [
+        "#Write python program to have a list of words  to sort them from longest to shortest using list of tuples\n",
+        " \n",
+        "txt = 'but soft what light in yonder window breaks'\n",
+        "words = txt.split()\n",
+        "t = list()\n",
+        "for word in words:\n",
+        "   t.append((len(word), word))\n",
+        "t.sort(reverse=True)\n",
+        "\n",
+        "res = list()\n",
+        "for length, word in t:\n",
+        "    res.append(word)\n",
+        "\n",
+        "print(res)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['yonder', 'window', 'breaks', 'light', 'what', 'soft', 'but', 'in']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EUXc4w_v04Ai",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "3821ca56-26ef-4270-82af-ec555346b427"
+      },
+      "source": [
+        "#Python program that assigns variables\n",
+        "\n",
+        "# Create packed tuple.\n",
+        "pair = (\"dog\", \"cat\")\n",
+        "\n",
+        "# Unpack tuple.\n",
+        "(key, value) = pair\n",
+        "\n",
+        "# Display unpacked variables.\n",
+        "print(key)\n",
+        "print(value)\n"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "dog\n",
+            "cat\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XEgMa3ZP1Ci5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "de8fa19f-054e-4d65-882c-60d42a0bc9cf"
+      },
+      "source": [
+        "#Python program that searches tuples\n",
+        "pair = (\"dog\", \"cat\")\n",
+        "\n",
+        "# Search for a value.\n",
+        "if \"cat\" in pair:\n",
+        "    print(\"Cat found\")\n",
+        "\n",
+        "# Search for a value not present.\n",
+        "if \"bird\" not in pair:\n",
+        "    print(\"Bird not found\")\n"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cat found\n",
+            "Bird not found\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
